--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
+
+<head>
+    <title>Admin - ILA EXIM</title>
+</head>
+
 <body>
-Hello Admin!
+    <h1>Hello Admin!</h1>
 </body>
+
 </html>
