key person added

--- a/site/pages/diamondfaq/diamondfaq.html
+++ b/site/pages/diamondfaq/diamondfaq.html
@@ -6,7 +6,7 @@
 <div id="about" class="section wb">
     <div>
         <div class="section-title text-center">
-            <h3><span class="dark">Frequently Asked Questions</span></h3>
+            <h3><span class="dark">Diamond FAQ</span></h3>
         </div>
         <div class="m-2" ng-repeat="q in faqs track by $index">
             <form class="" name="quoteForm" ng-submit="updateFaq(q)">
