--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!-- Angular -->
 <script src="site/js/libs/angular.min.js"></script>
 <script src="site/js/libs/angular-route.js"></script>
-<script src="site/js/libs/bootstrap.js"></script>
+<script src="site/js/libs/bootstrap.min.js"></script>
 
 <script src="site/js/util.js"></script>
 <script src="site/js/script.js"></script>
@@ -34,37 +34,38 @@
 
 <script src="site/pages/home/home.js"></script>
 <script src="site/pages/login/login.js"></script>
+<script src="site/pages/keyperson/keyperson.js"></script>
 <script src="site/pages/faq/faq.js"></script>
+<script src="site/pages/diamondfaq/diamondfaq.js"></script>
+
 
 </head>
 
 <body ng-controller="home">
 
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">ILA EXIM</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link" href="#" id='home'>Home</a>
-                <a class="nav-item nav-link" href="#!faq" id='faq'>FAQ</a>
-                <!-- <a class="nav-item nav-link" href="#!login" id='login' ng-hide="isLoggedIn">Login</a> -->
-                <!-- <a class="nav-item nav-link" href="#" id='logout' ng-click="logout()" ng-show="isLoggedIn">Logout</a> -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">ILA EXIM</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <a class="nav-item nav-link" href="#" id='home'>Home</a>
+                    <!-- <a class="nav-item nav-link" href="#!faq" id='faq'>FAQ</a> -->
+                    <!-- <a class="nav-item nav-link" href="#!diamondfaq" id='faq'>Diamond FAQ</a> -->
+                </ul>
             </div>
         </div>
     </nav>
-    <!-- /navbar -->
 
     <!-- container -->
     <main role="main" class="container">
 
         <div class="row">
             <div class="col">
-                <div id="response"></div>
-
                 <div ng-view id="content"></div>
             </div>
         </div>
