php session used

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <script src="site/js/libs/angular-route.js"></script>
 <script src="site/js/libs/bootstrap.min.js"></script>
 
+<script src="site/js/models.js"></script>
 <script src="site/js/util.js"></script>
 <script src="site/js/script.js"></script>
 <script src="site/js/dataservice.js"></script>
@@ -37,6 +38,7 @@
 <script src="site/pages/keyperson/keyperson.js"></script>
 <script src="site/pages/faq/faq.js"></script>
 <script src="site/pages/diamondfaq/diamondfaq.js"></script>
+<script src="site/pages/blog/blog.js"></script>
 
 
 </head>
