--- a/site/pages/home/home.html
+++ b/site/pages/home/home.html
@@ -33,11 +33,11 @@
                 <h2>Other</h2>
             </li>
             <a href="#" class="list-group-item list-group-item-secondary list-group-item-action">About Us</a>
-            <a href="#!keyperson" class="list-group-item list-group-item-action">Key person</a>
+            <a href="#!keyperson" class="list-group-item list-group-item-action">Key Person</a>
             <a href="#" class="list-group-item list-group-item-secondary list-group-item-action">Certificates</a>
             <a href="#!faq" class="list-group-item list-group-item-action">FAQ</a>
             <a href="#!diamondfaq" class="list-group-item list-group-item-action">Diamond FAQ</a>
-            <a href="#" class="list-group-item list-group-item-secondary list-group-item-action">Blog</a>
+            <a href="#!blog" class="list-group-item list-group-item-action">Blog</a>
             <a href="#" class="list-group-item list-group-item-secondary list-group-item-action">Reviews</a>
         </div>
     </div>
