--- a/site/pages/keyperson/keyperson.html
+++ b/site/pages/keyperson/keyperson.html
@@ -9,101 +9,52 @@
             <h3><span class="dark">Key Person</span></h3>
         </div>
         <div class="m-2" ng-repeat="k in keypersons track by $index">
-            <form class="" name="quoteForm" ng-submit="updateKeyperson(k)">
+            <message type="k.messageType" text="k.messageText" click-action="resetMessage(k)"></message>
+            <br>
+            <form class="" name="quoteForm">
                 <div class="row col-md-12">
-                    <div class="col-md-1 form-check">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault-{{$index}}"
-                                ng-model="k.isShowing" ng-checked="k.isShowing" ng-disabled="k.isContactFormDisabled">
-                            <span>{{$index + 1}}</span>
-                        </label>
-                    </div>
+                    
+                    <checkboxupdate class="col-md-1 form-check" label="{{$index+1}}" data="k.is_showing"
+                        disabled="k.isContactFormDisabled">
+                    </checkboxupdate>
                     <div class="col-md-9">
-                        <div class="input-group mb-3">
-                            <span class="col-md-1 text-end me-2" for="question">Name</span>
-                            <input type="text" class="form-control" name="name" id="name" required
-                                ng-model="k.name" ng-disabled="k.isContactFormDisabled">
-                        </div>
-                        <div class="input-group mb-3">
-                            <span class="col-md-1 text-end me-2" for="question">Designation</span>
-                            <input type="text" class="form-control" name="designation" id="designation" required
-                                ng-model="k.designation" ng-disabled="k.isContactFormDisabled">
-                        </div>
-                        <div class="input-group mb-3">
-                            <span class="col-md-1 text-end me-2" for="question">Expertise</span>
-                            <input type="text" class="form-control" name="expertise" id="expertise" required
-                                ng-model="k.expertise" ng-disabled="k.isContactFormDisabled">
-                        </div>
-                        <div class="input-group mb-3">
-                            <span class="col-md-1 text-end me-2" for="question">Image</span>
-                            <input type="text" class="form-control" name="image" id="image" required
-                                ng-model="k.image" ng-disabled="k.isContactFormDisabled">
-                        </div>
-                        <div class="input-group mb-3">
-                            <span class="col-md-1 text-end me-2" for="answer">About</span>
-                            <textarea auto-height class="form-control" type="text" name="about" id="about" required
-                                ng-model="k.about" ng-disabled="k.isContactFormDisabled"></textarea>
-                        </div>
+                        <textupdate id="name" label="Name" data="k.name" disabled="k.isContactFormDisabled"
+                            required="true"></textupdate>
+                        <textupdate id="designation" label="Designation" data="k.designation" disabled="k.isContactFormDisabled"
+                            required="true"></textupdate>
+                        <textupdate id="expertise" label="Expertise" data="k.expertise" disabled="k.isContactFormDisabled"
+                            required="true"></textupdate>
+                        <textupdate id="image" label="Image" data="k.image" disabled="k.isContactFormDisabled"
+                            required="true"></textupdate>
+                        <textareaupdate id="about" label="About" data="k.about"
+                            disabled="k.isContactFormDisabled" required="true"></textareaupdate>
                     </div>
-                    <div class="col-md-2">
-                        <button class="w-100 btn btn-dark" type="button" ng-click="enableUpdateForm(k)"
-                            ng-disabled="!k.isContactFormDisabled" ng-show="k.isContactFormDisabled">Update</button>
-                        <button class="w-100 btn btn-warning" type="button" ng-click="cancelUpdate(k)"
-                            ng-disabled="k.isContactFormDisabled" ng-hide="k.isContactFormDisabled">Cancel</button>
-                        <button class="w-100 btn btn-dark" type="submit" ng-disabled="k.isContactFormDisabled"
-                            ng-hide="k.isContactFormDisabled">Save</button>
-                        <button class="w-100 btn btn-danger" type="button" ng-click="deleteKeyperson(k)"
-                            ng-disabled="k.isContactFormDisabled" ng-hide="k.isContactFormDisabled">Delete</button>
-                    </div>
+                    <actionbuttons class="col-md-2" update-action="enableUpdateForm(k)" cancel-action="cancelUpdate(k)"
+                        save-action="updateKeyperson(k)" delete-action="deleteKeyperson(k)" disabled="k.isContactFormDisabled">
+                    </actionbuttons>
                 </div>
             </form>
-            <br>
-            <div class="row">
-                <span class="col-md-6"></span>
-                <button class="col-md-6 messages alert alert-{{k.message.type}} alert-dismissible show" role="alert"
-                    ng-click="resetMessage(k)" ng-hide="k.message.type=='none'">
-                    {{k.message.text}}
-                    <p style="float:right; text-decoration:underline; margin-bottom: 0px;">Close</p>
-                </button>
-            </div>
             <hr class="hr1">
         </div>
         <div ng-repeat="k in [newKeyperson] track by $index">
+            <message type="k.messageType" text="k.messageText" click-action="resetMessage(k)"></message>
+            <br>
             <form name="quoteForm" ng-submit="createKeyperson()">
                 <div class="row col-md-12">
-                    <div class="col-md-1 form-check">
-                        <label class="form-check-label">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault-{{$index}}"
-                                ng-model="k.isShowing" ng-checked="k.isShowing">
-                            <span>New</span>
-                        </label>
-                    </div>
+                    <checkboxupdate class="col-md-1 form-check" label="New" data="k.is_showing"
+                        disabled="k.isContactFormDisabled">
+                    </checkboxupdate>
                     <div class="col-md-9">
-                        <div class="input-group mb-3">
-                            <span class="col-md-1 text-end me-2" for="question">Name</span>
-                            <input type="text" class="form-control" name="name" id="name" required
-                                ng-model="k.name">
-                        </div>
-                        <div class="input-group mb-3">
-                            <span class="col-md-1 text-end me-2" for="question">Designation</span>
-                            <input type="text" class="form-control" name="designation" id="designation" required
-                                ng-model="k.designation">
-                        </div>
-                        <div class="input-group mb-3">
-                            <span class="col-md-1 text-end me-2" for="question">Expertise</span>
-                            <input type="text" class="form-control" name="expertise" id="expertise" required
-                                ng-model="k.expertise">
-                        </div>
-                        <div class="input-group mb-3">
-                            <span class="col-md-1 text-end me-2" for="question">Image</span>
-                            <input type="text" class="form-control" name="image" id="image" required
-                                ng-model="k.image">
-                        </div>
-                        <div class="input-group mb-3">
-                            <span class="col-md-1 text-end me-2" for="answer">About</span>
-                            <textarea auto-height class="form-control" type="text" name="about" id="about" required
-                                ng-model="k.about"></textarea>
-                        </div>
+                        <textupdate id="name" label="Name" data="k.name" disabled="k.isContactFormDisabled"
+                            required="true"></textupdate>
+                        <textupdate id="designation" label="Designation" data="k.designation" disabled="k.isContactFormDisabled"
+                            required="true"></textupdate>
+                        <textupdate id="expertise" label="Expertise" data="k.expertise" disabled="k.isContactFormDisabled"
+                            required="true"></textupdate>
+                        <textupdate id="image" label="Image" data="k.image" disabled="k.isContactFormDisabled"
+                            required="true"></textupdate>
+                        <textareaupdate id="about" label="About" data="k.about"
+                            disabled="k.isContactFormDisabled" required="true"></textareaupdate>
                     </div>
                     <div class="col-md-2">
                         <button class="w-100 btn btn-dark" type="submit"
@@ -111,15 +62,6 @@
                     </div>
                 </div>
             </form>
-            <br>
-            <div class="row">
-                <span class="col-md-6"></span>
-                <button class="col-md-6 messages alert alert-{{k.message.type}} alert-dismissible show" role="alert"
-                    ng-click="resetMessage(k)" ng-hide="k.message.type=='none'">
-                    {{k.message.text}}
-                    <p style="float:right; text-decoration:underline; margin-bottom: 0px;">Close</p>
-                </button>
-            </div>
             <hr class="hr1">
         </div>
     </div>
