--- a/site/pages/keyperson/keyperson.html
+++ b/site/pages/keyperson/keyperson.html
@@ -13,24 +13,26 @@
             <br>
             <form class="" name="quoteForm">
                 <div class="row col-md-12">
-                    
+
                     <checkboxupdate class="col-md-1 form-check" label="{{$index+1}}" data="k.is_showing"
                         disabled="k.isContactFormDisabled">
                     </checkboxupdate>
                     <div class="col-md-9">
                         <textupdate id="name" label="Name" data="k.name" disabled="k.isContactFormDisabled"
                             required="true"></textupdate>
-                        <textupdate id="designation" label="Designation" data="k.designation" disabled="k.isContactFormDisabled"
-                            required="true"></textupdate>
-                        <textupdate id="expertise" label="Expertise" data="k.expertise" disabled="k.isContactFormDisabled"
-                            required="true"></textupdate>
-                        <textupdate id="image" label="Image" data="k.image" disabled="k.isContactFormDisabled"
-                            required="true"></textupdate>
-                        <textareaupdate id="about" label="About" data="k.about"
-                            disabled="k.isContactFormDisabled" required="true"></textareaupdate>
+                        <textupdate id="designation" label="Designation" data="k.designation"
+                            disabled="k.isContactFormDisabled" required="true"></textupdate>
+                        <textupdate id="expertise" label="Expertise" data="k.expertise"
+                            disabled="k.isContactFormDisabled" required="true"></textupdate>
+                        <fileupdate id="file_image" label="Image" oldname="k.image" newimage="false"
+                            ischange="k.isfilechanged_image" path="k.path_image" data="k.file_image"
+                            disabled="k.isContactFormDisabled" required="false"></fileupdate>
+                        <textareaupdate id="about" label="About" data="k.about" disabled="k.isContactFormDisabled"
+                            required="true"></textareaupdate>
                     </div>
                     <actionbuttons class="col-md-2" update-action="enableUpdateForm(k)" cancel-action="cancelUpdate(k)"
-                        save-action="updateKeyperson(k)" delete-action="deleteKeyperson(k)" disabled="k.isContactFormDisabled">
+                        save-action="updateKeyperson(k)" delete-action="deleteKeyperson(k)"
+                        disabled="k.isContactFormDisabled">
                     </actionbuttons>
                 </div>
             </form>
@@ -47,14 +49,15 @@
                     <div class="col-md-9">
                         <textupdate id="name" label="Name" data="k.name" disabled="k.isContactFormDisabled"
                             required="true"></textupdate>
-                        <textupdate id="designation" label="Designation" data="k.designation" disabled="k.isContactFormDisabled"
-                            required="true"></textupdate>
-                        <textupdate id="expertise" label="Expertise" data="k.expertise" disabled="k.isContactFormDisabled"
-                            required="true"></textupdate>
-                        <textupdate id="image" label="Image" data="k.image" disabled="k.isContactFormDisabled"
-                            required="true"></textupdate>
-                        <textareaupdate id="about" label="About" data="k.about"
-                            disabled="k.isContactFormDisabled" required="true"></textareaupdate>
+                        <textupdate id="designation" label="Designation" data="k.designation"
+                            disabled="k.isContactFormDisabled" required="true"></textupdate>
+                        <textupdate id="expertise" label="Expertise" data="k.expertise"
+                            disabled="k.isContactFormDisabled" required="true"></textupdate>
+                        <fileupdate id="file_image" label="Image" oldname="k.image" newimage="true"
+                            ischange="k.isfilechanged_image" path="k.path_image" data="k.file_image"
+                            disabled="k.isContactFormDisabled" required="false"></fileupdate>
+                        <textareaupdate id="about" label="About" data="k.about" disabled="k.isContactFormDisabled"
+                            required="true"></textareaupdate>
                     </div>
                     <div class="col-md-2">
                         <button class="w-100 btn btn-dark" type="submit"
