review, certificate added

--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
 
 <script src="site/pages/home/home.js"></script>
 <script src="site/pages/login/login.js"></script>
+<script src="site/pages/about/about.js"></script>
+<script src="site/pages/certificate/certificate.js"></script>
 <script src="site/pages/keyperson/keyperson.js"></script>
 <script src="site/pages/faq/faq.js"></script>
 <script src="site/pages/diamondfaq/diamondfaq.js"></script>
 <script src="site/pages/blog/blog.js"></script>
+<script src="site/pages/review/review.js"></script>
 
 
 </head>
