--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <script src="site/pages/about/about.js"></script>
 <script src="site/pages/certificate/certificate.js"></script>
 <script src="site/pages/keyperson/keyperson.js"></script>
+<script src="site/pages/product/product.js"></script>
 <script src="site/pages/faq/faq.js"></script>
 <script src="site/pages/diamondfaq/diamondfaq.js"></script>
 <script src="site/pages/blog/blog.js"></script>
@@ -50,8 +51,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">ILA EXIM</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <a class="navbar-brand" href="#">ILA EXIM Admin</a>
+            <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -59,10 +60,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <a class="nav-item nav-link" href="#" id='home'>Home</a>
-                    <!-- <a class="nav-item nav-link" href="#!faq" id='faq'>FAQ</a> -->
-                    <!-- <a class="nav-item nav-link" href="#!diamondfaq" id='faq'>Diamond FAQ</a> -->
                 </ul>
-            </div>
+            </div> -->
         </div>
     </nav>
 
