--- a/site/pages/home/home.html
+++ b/site/pages/home/home.html
@@ -21,7 +21,7 @@
             <li class="list-group-item list-group-item-dark d-flex justify-content-center">
                 <h2>Product</h2>
             </li>
-            <a href="#" class="list-group-item list-group-item-secondary list-group-item-action">Product</a>
+            <a href="#!product" class="list-group-item list-group-item-action">Product</a>
             <a href="#" class="list-group-item list-group-item-secondary list-group-item-action">Product Images</a>
             <a href="#" class="list-group-item list-group-item-secondary list-group-item-action">Product Links</a>
             <a href="#" class="list-group-item list-group-item-secondary list-group-item-action">Diamond</a>
