product pages added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 <script src="site/pages/certificate/certificate.js"></script>
 <script src="site/pages/keyperson/keyperson.js"></script>
 <script src="site/pages/product/product.js"></script>
+<script src="site/pages/subproduct/subproduct.js"></script>
+<script src="site/pages/productitem/productitem.js"></script>
+<script src="site/pages/productimage/productimage.js"></script>
+<script src="site/pages/productlink/productlink.js"></script>
+<script src="site/pages/diamondsubproduct/diamondsubproduct.js"></script>
+<script src="site/pages/diamonditem/diamonditem.js"></script>
 <script src="site/pages/faq/faq.js"></script>
 <script src="site/pages/diamondfaq/diamondfaq.js"></script>
 <script src="site/pages/blog/blog.js"></script>
