--- a/site/pages/certificate/certificate.html
+++ b/site/pages/certificate/certificate.html
@@ -17,9 +17,9 @@
                     <div class="col-md-9">
                         <textupdate id="title" label="Title" data="q.title"
                             disabled="q.isContactFormDisabled" required="true"></textupdate>
-                        <fileupdate id="file_image" label="Image" oldname="q.image" newimage="false"
+                        <imageupdate id="file_image" label="Image" oldname="q.image" newimage="false"
                             ischange="q.isfilechanged_image" path="q.path_image" data="q.file_image"
-                            disabled="q.isContactFormDisabled" required="false"></fileupdate>
+                            disabled="q.isContactFormDisabled" required="false"></imageupdate>
                     </div>
                     <actionbuttons class="col-md-2" update-action="enableUpdateForm(q)" cancel-action="cancelUpdate(q)"
                         save-action="updateCertificate(q)" delete-action="deleteCertificate(q)" disabled="q.isContactFormDisabled">
@@ -39,9 +39,9 @@
                     <div class="col-md-9">
                         <textupdate id="title" label="Title" data="q.title"
                             disabled="q.isContactFormDisabled" required="true"></textupdate>
-                        <fileupdate id="file_image" label="Image" oldname="q.image" newimage="true"
+                        <imageupdate id="file_image" label="Image" oldname="q.image" newimage="true"
                             ischange="q.isfilechanged_image" path="q.path_image" data="q.file_image"
-                            disabled="q.isContactFormDisabled" required="false"></fileupdate>
+                            disabled="q.isContactFormDisabled" required="false"></imageupdate>
                     </div>
                     <div class="col-md-2">
                         <button class="w-100 btn btn-dark" type="submit"
