--- a/site/pages/home/home.html
+++ b/site/pages/home/home.html
@@ -22,9 +22,12 @@
                 <h2>Product</h2>
             </li>
             <a href="#!product" class="list-group-item list-group-item-action">Product</a>
-            <a href="#" class="list-group-item list-group-item-secondary list-group-item-action">Product Images</a>
-            <a href="#" class="list-group-item list-group-item-secondary list-group-item-action">Product Links</a>
-            <a href="#" class="list-group-item list-group-item-secondary list-group-item-action">Diamond</a>
+            <a href="#!subproduct" class="list-group-item list-group-item-action">Sub Product</a>
+            <a href="#!productitem" class="list-group-item list-group-item-action">Product Items</a>
+            <a href="#!productimage" class="list-group-item list-group-item-action">Product Images</a>
+            <a href="#!productlink" class="list-group-item list-group-item-action">Product Links</a>
+            <a href="#!diamondsubproduct" class="list-group-item list-group-item-action">Diamond Sub Product</a>
+            <a href="#!diamonditem" class="list-group-item list-group-item-action">Diamond Items</a>
         </div>
     </div>
     <div class="col-md-4 mb-4">            
