--- a/site/pages/keyperson/keyperson.html
+++ b/site/pages/keyperson/keyperson.html
@@ -24,9 +24,9 @@
                             disabled="k.isContactFormDisabled" required="true"></textupdate>
                         <textupdate id="expertise" label="Expertise" data="k.expertise"
                             disabled="k.isContactFormDisabled" required="true"></textupdate>
-                        <fileupdate id="file_image" label="Image" oldname="k.image" newimage="false"
+                        <imageupdate id="file_image" label="Image" oldname="k.image" newimage="false"
                             ischange="k.isfilechanged_image" path="k.path_image" data="k.file_image"
-                            disabled="k.isContactFormDisabled" required="false"></fileupdate>
+                            disabled="k.isContactFormDisabled" required="false"></imageupdate>
                         <textareaupdate id="about" label="About" data="k.about" disabled="k.isContactFormDisabled"
                             required="true"></textareaupdate>
                     </div>
@@ -53,9 +53,9 @@
                             disabled="k.isContactFormDisabled" required="true"></textupdate>
                         <textupdate id="expertise" label="Expertise" data="k.expertise"
                             disabled="k.isContactFormDisabled" required="true"></textupdate>
-                        <fileupdate id="file_image" label="Image" oldname="k.image" newimage="true"
+                        <imageupdate id="file_image" label="Image" oldname="k.image" newimage="true"
                             ischange="k.isfilechanged_image" path="k.path_image" data="k.file_image"
-                            disabled="k.isContactFormDisabled" required="false"></fileupdate>
+                            disabled="k.isContactFormDisabled" required="false"></imageupdate>
                         <textareaupdate id="about" label="About" data="k.about" disabled="k.isContactFormDisabled"
                             required="true"></textareaupdate>
                     </div>
