key person country added

--- a/site/pages/keyperson/keyperson.html
+++ b/site/pages/keyperson/keyperson.html
@@ -24,6 +24,11 @@
                             disabled="k.isContactFormDisabled" required="true"></textupdate>
                         <textupdate id="expertise" label="Expertise" data="k.expertise"
                             disabled="k.isContactFormDisabled" required="true"></textupdate>
+                        <textupdate id="country" label="Country" data="k.country" disabled="k.isContactFormDisabled"
+                            required="true"></textupdate>
+                        <singleselect id="person_type" label="Person Type" data="k.person_type" list="allPersonTypeList"
+                            disabled="k.isContactFormDisabled" required="true">
+                        </singleselect>
                         <imageupdate id="file_image" label="Image" oldname="k.image" newimage="false"
                             ischange="k.isfilechanged_image" path="k.path_image" data="k.file_image"
                             disabled="k.isContactFormDisabled" required="false"></imageupdate>
@@ -53,6 +58,11 @@
                             disabled="k.isContactFormDisabled" required="true"></textupdate>
                         <textupdate id="expertise" label="Expertise" data="k.expertise"
                             disabled="k.isContactFormDisabled" required="true"></textupdate>
+                        <textupdate id="country" label="Country" data="k.country" disabled="k.isContactFormDisabled"
+                            required="true"></textupdate>
+                        <singleselect id="person_type" label="Person Type" data="k.person_type" list="allPersonTypeList"
+                            disabled="k.isContactFormDisabled" required="true">
+                        </singleselect>
                         <imageupdate id="file_image" label="Image" oldname="k.image" newimage="true"
                             ischange="k.isfilechanged_image" path="k.path_image" data="k.file_image"
                             disabled="k.isContactFormDisabled" required="false"></imageupdate>
