--- a/site/pages/product/product.html
+++ b/site/pages/product/product.html
@@ -39,7 +39,7 @@
                                 required="true"></textupdate>
                             <textupdate id="short_description" label="Short Description" data="q.short_description"
                                 disabled="q.isContactFormDisabled" required="true"></textupdate>
-                            <textareaupdate id="description" label="Description" data="q.description"
+                            <textareaupdate id="description" label="Description" data="q.printable_description"
                                 disabled="q.isContactFormDisabled" required="true"></textareaupdate>
                             <imageupdate id="file_image" label="Image" oldname="q.image" newimage="false"
                                 ischange="q.isfilechanged_image" path="q.path_image" data="q.file_image"
