html update added

--- a/site/pages/productimage/productimage.html
+++ b/site/pages/productimage/productimage.html
@@ -52,7 +52,7 @@
                                     <textupdate id="short_description" label="Short Description"
                                         data="k.short_description" disabled="k.isContactFormDisabled" required="true">
                                     </textupdate>
-                                    <textareaupdate id="description" label="Description" data="k.printable_description"
+                                    <textareaupdate id="description" label="Description" data="k.html_printable_description"
                                         disabled="k.isContactFormDisabled" required="true"></textareaupdate>
                                     <imageupdate id="file_image" label="Image" oldname="k.image" newimage="false"
                                         ischange="k.isfilechanged_image" path="k.path_image" data="k.file_image"
@@ -83,8 +83,8 @@
                                     disabled="k.isContactFormDisabled" required="true"></textupdate> -->
                                 <textupdate id="short_description" label="Short Description" data="k.short_description"
                                     disabled="k.isContactFormDisabled" required="true"></textupdate>
-                                    <textareaupdate id="description" label="Description" data="k.printable_description"
-                                        disabled="k.isContactFormDisabled" required="true"></textareaupdate>
+                                <textareaupdate id="description" label="Description" data="k.html_printable_description"
+                                    disabled="k.isContactFormDisabled" required="true"></textareaupdate>
                                 <imageupdate id="file_image" label="Image" oldname="k.image" newimage="false"
                                     ischange="k.isfilechanged_image" path="k.path_image" data="k.file_image"
                                     disabled="k.isContactFormDisabled" required="false"></imageupdate>
