--- a/site/pages/faq/faq.html
+++ b/site/pages/faq/faq.html
@@ -15,6 +15,9 @@
                         disabled="q.isContactFormDisabled">
                     </checkboxupdate>
                     <div class="col-md-9">
+                        <singleselect id="type" label="Type" data="q.type" list="allFAQTypeList"
+                            disabled="q.isContactFormDisabled" required="true">
+                        </singleselect>
                         <textupdate id="question" label="Question" data="q.question" disabled="q.isContactFormDisabled"
                             required="true"></textupdate>
                         <textareaupdate id="answer" label="Answer" data="q.printable_answer"
@@ -36,6 +39,9 @@
                         disabled="q.isContactFormDisabled">
                     </checkboxupdate>
                     <div class="col-md-9">
+                        <singleselect id="type" label="Type" data="q.type" list="allFAQTypeList"
+                            disabled="q.isContactFormDisabled" required="true">
+                        </singleselect>
                         <textupdate id="question" label="Question" data="q.question" disabled="q.isContactFormDisabled"
                             required="true"></textupdate>
                         <textareaupdate id="answer" label="Answer" data="q.printable_answer"
